# telegram-video-bot

./: .dockerignore  .env.example  .env.production.example  .gitignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-runpod-comfyui-rtx4090-cu128-fp8.yml  build-runpod-comfyui-rtxpro-cu130-fp8.yml  build-runpod-comfyui-rtxpro-cu130.yml  runpod-comfyui-image.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_balance_transactions.py  0003_generation_flow.py  0004_runpod_manager.py  0005_waiting_for_gpu.py  0006_waiting_for_pod.py  0007_segment_distribution.py  0008_business_accounts.py  0009_admin_audit_logs.py  0010_waiting_notify.py  0011_generation_quality.py  0012_generation_batches.py  0013_generation_batch_items.py  0014_batch_upload_sessions.py
backend/: Dockerfile
backend/app/: __init__.py  main.py
bot/: Dockerfile
bot/app/: __init__.py  admin_main.py  main.py
deploy/: Caddyfile.example
docker/runpod-comfyui/: Dockerfile  README.md  (+4 more)
scripts/: backup_postgres.sh  create_admin.py  deploy_prod.sh  restore_postgres.sh  runpod_bootstrap_comfyui.sh  wait_for_db.py
tests/: test_batch_archive.py  test_batch_generation_service.py  test_batch_upload_sessions.py  test_bot_batch_backend_client.py  test_business_account_admin_schema.py  test_output_filenames.py  test_queue_load_planner.py  test_runpod_manual_mode.py  test_video_probe.py  test_video_quality_pricing.py  test_workflow_patcher.py
worker/: Dockerfile
workflows/: infinite_talk_api.json  infinite_talk_base.json
(+137 files in other folders)
