[project]
name = "telegram-video-avatar-bot"
version = "0.1.0"
description = "Telegram bot monorepo skeleton for video generation with RunPod, ComfyUI, InfiniteTalk, R2, and Cryptomus."
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiogram>=3.10.0,<4.0.0",
    "alembic>=1.13.0,<2.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "boto3>=1.34.0,<2.0.0",
    "celery[redis]>=5.4.0,<6.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "python-multipart>=0.0.12,<1.0.0",
    "redis>=5.0.0,<6.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0,<2.0.0",
    "ruff>=0.6.0,<1.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
